more tidy up of warnings